# hacks-ai-international-2023

./: .env  .env.example  Dockerfile  README.md  api.Dockerfile  background.Dockerfile  captain-definition-api  captain-definition-background  captain-definition-frontend  docker-compose.yaml  frontend.Dockerfile  pyproject.toml  test.html
app/: background.py  main.py  queries.py  settings.py
app/background/: second_model.py  terms_and_summary.py  transcriber.py  worker.py
app/models/requests/: create_lecture.py  register.py
app/models/responses/: created_lecture.py  lecture.py  lecture_status.py  preview_lecture.py  term.py  token.py
app/routers/v1/: lectures.py  router.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql
dbschema/queries/: create_lecture.edgeql  delete_lecture.edgeql  delete_lectures.edgeql  finish_analysis.edgeql  get_lecture.edgeql  get_lectures.edgeql  set_lecture_status.edgeql
frontend/src/: Front.json
frontend/src/components/: tab-fileview.vue
ml/: create_dataset_yagpt.ipynb  create_submition.ipynb  gloss-summ.ipynb  gloss_summ.ipynb  razmetka.ipynb  sample_submission.csv  st_models.ipynb
scripts/: start-worker.sh  start.sh
