[tool.poetry]
name = "geekbrains"
version = "0.1.0"
description = ""
authors = ["gabbhack <copyleft@sosus.org>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
edgedb = "^1.7.0"
arq = "^0.25.0"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
miniopy-async = "^1.17"
redis = "^5.0.1"
loguru = "^0.7.2"

[tool.poetry.group.background]
optional = true

[tool.poetry.group.background.dependencies]
torch = {version = "^2.1.1+cpu", source = "pytorch"}
librosa = "^0.10.1"
transformers = "^4.35.2"
accelerate = "^0.24.1"
llama-cpp-python = "^0.2.19"
langchain = "^0.0.340"
chromadb = "^0.4.18"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
python = "^3.12"
fastapi = "^0.101.1"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"
mypy = "^1.7.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.ruff]
line-length = 79
src = ["app"]
select = ["ALL"]
ignore = [
    "D203",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D213",
    "RUF012",
    "ANN101",
    "A003",
    "COM812",
    "ISC001",
    "TD002",
    "FIX002",
    "TD003"
]

fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "app/queries.py"
]
per-file-ignores = {}

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py312"

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
plugins = "pydantic.mypy"
python_version = 3.11
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true
exclude = [
    "app/queries.py"  # autogenerated by edgedb-py
]

[[tool.mypy.overrides]]
module = "miniopy_async.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
